--- a/W08D4/W08D4_NLPII.ipynb
+++ b/W08D4/W08D4_NLPII.ipynb
@@ -34,13 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/seiryu8808/opt/anaconda3/lib/python3.7/site-packages/past/types/oldstr.py:5: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working\n",
+      "  from collections import Iterable\n",
+      "/Users/seiryu8808/opt/anaconda3/lib/python3.7/site-packages/past/builtins/misc.py:4: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working\n",
+      "  from collections import Mapping\n"
+     ]
+    }
+   ],
    "source": [
     "import os.path\n",
     "import numpy as np\n",
@@ -121,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -217,7 +228,7 @@
        "4  10003_3.txt  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -240,12 +251,12 @@
      "data": {
       "text/plain": [
        "unsup    50000\n",
-       "neg      25000\n",
        "pos      25000\n",
+       "neg      25000\n",
        "Name: label, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -308,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -338,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -357,7 +368,10 @@
     "X_counts = movie_vec.fit_transform(imdb_df['review'])\n",
     "\n",
     "# Convert raw frequency counts into binarized representation. \n",
-    "X_binary = X_counts > 0"
+    "X_binary = X_counts > 0\n",
+    "\n",
+    "\n",
+    "## Split before"
    ]
   },
   {
@@ -378,8 +392,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note to the reader: I should have split my dataset before applying CountVectorizer. In the training part, you should apply .fit_transform and in the testing part, you should apply only .tranform\n",
+    "\n",
+    "As an exercise, fix this error in your forked copy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -396,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -429,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -486,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -516,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -534,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -548,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -569,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -661,7 +684,7 @@
        "5  neg         pos       "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -720,7 +743,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -763,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -776,7 +799,7 @@
        "{'neg': 0.412, 'neu': 0.588, 'pos': 0.0, 'compound': -0.6818}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -801,7 +824,7 @@
        "{'neg': 0.477, 'neu': 0.523, 'pos': 0.0, 'compound': -0.8074}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -903,7 +926,7 @@
        "4  neg         neg       neg          "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,14 +1336,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![img](images/probas.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![img](images/the_blueprint_relationship.png)"
    ]
@@ -1409,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1606,7 +1637,7 @@
        "25  26      probabilistic topic model"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1656,7 +1687,7 @@
        " ['probabilistic', 'topic', 'model']]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1668,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1706,7 +1737,7 @@
        " [(2, 1), (3, 1), (4, 1)]]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1737,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1748,12 +1779,12 @@
      "data": {
       "text/plain": [
        "[(0,\n",
-       "  '0.325*\"topic\" + 0.325*\"probabilistic\" + 0.324*\"model\" + 0.013*\"famous\" + 0.013*\"fashion\"'),\n",
+       "  '0.326*\"probabilistic\" + 0.326*\"topic\" + 0.324*\"model\" + 0.012*\"famous\" + 0.012*\"fashion\"'),\n",
        " (1,\n",
-       "  '0.326*\"model\" + 0.323*\"fashion\" + 0.323*\"famous\" + 0.014*\"probabilistic\" + 0.014*\"topic\"')]"
+       "  '0.327*\"model\" + 0.323*\"fashion\" + 0.323*\"famous\" + 0.014*\"topic\" + 0.014*\"probabilistic\"')]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1764,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1778,10 +1809,10 @@
        "<link rel=\"stylesheet\" type=\"text/css\" href=\"https://cdn.rawgit.com/bmabey/pyLDAvis/files/ldavis.v1.0.0.css\">\n",
        "\n",
        "\n",
-       "<div id=\"ldavis_el4231404203324471843128791654\"></div>\n",
+       "<div id=\"ldavis_el52447140454209571792519082626\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "\n",
-       "var ldavis_el4231404203324471843128791654_data = {\"mdsDat\": {\"x\": [0.1767163127660751, -0.1767163127660751], \"y\": [0.0, 0.0], \"topics\": [1, 2], \"cluster\": [1, 1], \"Freq\": [52.76336441766993, 47.236635582330074]}, \"tinfo\": {\"Term\": [\"fashion\", \"famous\", \"topic\", \"probabilistic\", \"model\", \"topic\", \"probabilistic\", \"model\", \"famous\", \"fashion\", \"fashion\", \"famous\", \"model\", \"probabilistic\", \"topic\"], \"Freq\": [12.0, 12.0, 13.0, 13.0, 25.0, 13.369319461771573, 13.358989649661158, 13.349329521404018, 0.542810882761018, 0.5349746771138807, 11.891290258794973, 11.883176738460396, 12.025531741402007, 0.5276374134431068, 0.516941785027021], \"Total\": [12.0, 12.0, 13.0, 13.0, 25.0, 13.886261246798593, 13.886627063104264, 25.374861262806025, 12.425987621221413, 12.426264935908854, 12.426264935908854, 12.425987621221413, 25.374861262806025, 13.886627063104264, 13.886261246798593], \"Category\": [\"Default\", \"Default\", \"Default\", \"Default\", \"Default\", \"Topic1\", \"Topic1\", \"Topic1\", \"Topic1\", \"Topic1\", \"Topic2\", \"Topic2\", \"Topic2\", \"Topic2\", \"Topic2\"], \"logprob\": [5.0, 4.0, 3.0, 2.0, 1.0, -1.124400019645691, -1.1252000331878662, -1.1259000301361084, -4.328400135040283, -4.342899799346924, -1.1309000253677368, -1.131600022315979, -1.1196999549865723, -4.246099948883057, -4.266499996185303], \"loglift\": [5.0, 4.0, 3.0, 2.0, 1.0, 0.6014, 0.6006, -0.0029, -2.4914, -2.506, 0.706, 0.7053, 0.0033, -2.5203, -2.5407]}, \"token.table\": {\"Topic\": [1, 2, 1, 2, 1, 2, 1, 2, 1, 2], \"Freq\": [0.08047650057949317, 0.9657180069539181, 0.08047470460011243, 0.9656964552013491, 0.5123180720225314, 0.4729089895592598, 0.9361524537905993, 0.07201172721466148, 0.9361771155642836, 0.07201362427417567], \"Term\": [\"famous\", \"famous\", \"fashion\", \"fashion\", \"model\", \"model\", \"probabilistic\", \"probabilistic\", \"topic\", \"topic\"]}, \"R\": 5, \"lambda.step\": 0.01, \"plot.opts\": {\"xlab\": \"PC1\", \"ylab\": \"PC2\"}, \"topic.order\": [1, 2]};\n",
+       "var ldavis_el52447140454209571792519082626_data = {\"mdsDat\": {\"x\": [0.17861749231815338, -0.17861749231815338], \"y\": [0.0, 0.0], \"topics\": [1, 2], \"cluster\": [1, 1], \"Freq\": [52.75688856877475, 47.24311143122525]}, \"tinfo\": {\"Term\": [\"fashion\", \"famous\", \"probabilistic\", \"topic\", \"model\", \"probabilistic\", \"topic\", \"model\", \"famous\", \"fashion\", \"fashion\", \"famous\", \"model\", \"topic\", \"probabilistic\"], \"Freq\": [12.0, 12.0, 13.0, 13.0, 25.0, 13.408714406942185, 13.401375768951599, 13.336356957062081, 0.505307045096246, 0.4986163938784338, 11.897294649479937, 11.890402318368176, 12.038639052880061, 0.5154262304569419, 0.5078652644311712], \"Total\": [12.0, 12.0, 13.0, 13.0, 25.0, 13.916579671373356, 13.916801999408541, 25.374996009942144, 12.395709363464423, 12.395911043358371, 12.395911043358371, 12.395709363464423, 25.374996009942144, 13.916801999408541, 13.916579671373356], \"Category\": [\"Default\", \"Default\", \"Default\", \"Default\", \"Default\", \"Topic1\", \"Topic1\", \"Topic1\", \"Topic1\", \"Topic1\", \"Topic2\", \"Topic2\", \"Topic2\", \"Topic2\", \"Topic2\"], \"logprob\": [5.0, 4.0, 3.0, 2.0, 1.0, -1.1212999820709229, -1.121899962425232, -1.1267000436782837, -4.399799823760986, -4.4131999015808105, -1.1304999589920044, -1.131100058555603, -1.1187000274658203, -4.269599914550781, -4.28439998626709], \"loglift\": [5.0, 4.0, 3.0, 2.0, 1.0, 0.6023, 0.6017, -0.0038, -2.5605, -2.5738, 0.7088, 0.7082, 0.0042, -2.546, -2.5608]}, \"token.table\": {\"Topic\": [1, 2, 2, 1, 2, 1, 2, 1, 2], \"Freq\": [0.08067307571339462, 0.9680769085607354, 0.9680611580727262, 0.5123153514943012, 0.4729064783024319, 0.9341375759692753, 0.07185673661302118, 0.9341226526433656, 0.07185558866487428], \"Term\": [\"famous\", \"famous\", \"fashion\", \"model\", \"model\", \"probabilistic\", \"probabilistic\", \"topic\", \"topic\"]}, \"R\": 5, \"lambda.step\": 0.01, \"plot.opts\": {\"xlab\": \"PC1\", \"ylab\": \"PC2\"}, \"topic.order\": [1, 2]};\n",
        "\n",
        "function LDAvis_load_lib(url, callback){\n",
        "  var s = document.createElement('script');\n",
@@ -1795,7 +1826,7 @@
        "if(typeof(LDAvis) !== \"undefined\"){\n",
        "   // already loaded: just create the visualization\n",
        "   !function(LDAvis){\n",
-       "       new LDAvis(\"#\" + \"ldavis_el4231404203324471843128791654\", ldavis_el4231404203324471843128791654_data);\n",
+       "       new LDAvis(\"#\" + \"ldavis_el52447140454209571792519082626\", ldavis_el52447140454209571792519082626_data);\n",
        "   }(LDAvis);\n",
        "}else if(typeof define === \"function\" && define.amd){\n",
        "   // require.js is available: use it to load d3/LDAvis\n",
@@ -1803,14 +1834,14 @@
        "   require([\"d3\"], function(d3){\n",
        "      window.d3 = d3;\n",
        "      LDAvis_load_lib(\"https://cdn.rawgit.com/bmabey/pyLDAvis/files/ldavis.v1.0.0.js\", function(){\n",
-       "        new LDAvis(\"#\" + \"ldavis_el4231404203324471843128791654\", ldavis_el4231404203324471843128791654_data);\n",
+       "        new LDAvis(\"#\" + \"ldavis_el52447140454209571792519082626\", ldavis_el52447140454209571792519082626_data);\n",
        "      });\n",
        "    });\n",
        "}else{\n",
        "    // require.js not available: dynamically load d3 & LDAvis\n",
        "    LDAvis_load_lib(\"https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js\", function(){\n",
        "         LDAvis_load_lib(\"https://cdn.rawgit.com/bmabey/pyLDAvis/files/ldavis.v1.0.0.js\", function(){\n",
-       "                 new LDAvis(\"#\" + \"ldavis_el4231404203324471843128791654\", ldavis_el4231404203324471843128791654_data);\n",
+       "                 new LDAvis(\"#\" + \"ldavis_el52447140454209571792519082626\", ldavis_el52447140454209571792519082626_data);\n",
        "            })\n",
        "         });\n",
        "}\n",
@@ -1819,37 +1850,36 @@
       "text/plain": [
        "PreparedData(topic_coordinates=              x    y  topics  cluster       Freq\n",
        "topic                                           \n",
-       "0      0.176716  0.0  1       1        52.763364\n",
-       "1     -0.176716  0.0  2       1        47.236636, topic_info=            Term       Freq      Total Category  logprob  loglift\n",
+       "0      0.178617  0.0  1       1        52.756889\n",
+       "1     -0.178617  0.0  2       1        47.243111, topic_info=            Term       Freq      Total Category  logprob  loglift\n",
        "1  fashion        12.000000  12.000000  Default  5.0000   5.0000 \n",
        "0  famous         12.000000  12.000000  Default  4.0000   4.0000 \n",
-       "4  topic          13.000000  13.000000  Default  3.0000   3.0000 \n",
-       "3  probabilistic  13.000000  13.000000  Default  2.0000   2.0000 \n",
+       "3  probabilistic  13.000000  13.000000  Default  3.0000   3.0000 \n",
+       "4  topic          13.000000  13.000000  Default  2.0000   2.0000 \n",
        "2  model          25.000000  25.000000  Default  1.0000   1.0000 \n",
-       "4  topic          13.369319  13.886261  Topic1  -1.1244   0.6014 \n",
-       "3  probabilistic  13.358990  13.886627  Topic1  -1.1252   0.6006 \n",
-       "2  model          13.349330  25.374861  Topic1  -1.1259  -0.0029 \n",
-       "0  famous         0.542811   12.425988  Topic1  -4.3284  -2.4914 \n",
-       "1  fashion        0.534975   12.426265  Topic1  -4.3429  -2.5060 \n",
-       "1  fashion        11.891290  12.426265  Topic2  -1.1309   0.7060 \n",
-       "0  famous         11.883177  12.425988  Topic2  -1.1316   0.7053 \n",
-       "2  model          12.025532  25.374861  Topic2  -1.1197   0.0033 \n",
-       "3  probabilistic  0.527637   13.886627  Topic2  -4.2461  -2.5203 \n",
-       "4  topic          0.516942   13.886261  Topic2  -4.2665  -2.5407 , token_table=      Topic      Freq           Term\n",
+       "3  probabilistic  13.408714  13.916580  Topic1  -1.1213   0.6023 \n",
+       "4  topic          13.401376  13.916802  Topic1  -1.1219   0.6017 \n",
+       "2  model          13.336357  25.374996  Topic1  -1.1267  -0.0038 \n",
+       "0  famous         0.505307   12.395709  Topic1  -4.3998  -2.5605 \n",
+       "1  fashion        0.498616   12.395911  Topic1  -4.4132  -2.5738 \n",
+       "1  fashion        11.897295  12.395911  Topic2  -1.1305   0.7088 \n",
+       "0  famous         11.890402  12.395709  Topic2  -1.1311   0.7082 \n",
+       "2  model          12.038639  25.374996  Topic2  -1.1187   0.0042 \n",
+       "4  topic          0.515426   13.916802  Topic2  -4.2696  -2.5460 \n",
+       "3  probabilistic  0.507865   13.916580  Topic2  -4.2844  -2.5608 , token_table=      Topic      Freq           Term\n",
        "term                                \n",
-       "0     1      0.080477  famous       \n",
-       "0     2      0.965718  famous       \n",
-       "1     1      0.080475  fashion      \n",
-       "1     2      0.965696  fashion      \n",
-       "2     1      0.512318  model        \n",
-       "2     2      0.472909  model        \n",
-       "3     1      0.936152  probabilistic\n",
-       "3     2      0.072012  probabilistic\n",
-       "4     1      0.936177  topic        \n",
-       "4     2      0.072014  topic        , R=5, lambda_step=0.01, plot_opts={'xlab': 'PC1', 'ylab': 'PC2'}, topic_order=[1, 2])"
+       "0     1      0.080673  famous       \n",
+       "0     2      0.968077  famous       \n",
+       "1     2      0.968061  fashion      \n",
+       "2     1      0.512315  model        \n",
+       "2     2      0.472906  model        \n",
+       "3     1      0.934138  probabilistic\n",
+       "3     2      0.071857  probabilistic\n",
+       "4     1      0.934123  topic        \n",
+       "4     2      0.071856  topic        , R=5, lambda_step=0.01, plot_opts={'xlab': 'PC1', 'ylab': 'PC2'}, topic_order=[1, 2])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
