--- a/W01D2/W01D2_PPDS.ipynb
+++ b/W01D2/W01D2_PPDS.ipynb
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -382,17 +382,8 @@
     }
    },
    "source": [
-    "## Other Notebook Basics\n",
-    "\n",
-    "- Organizating cells &mdash; insert, delete, cut/copy/paste, move up/down, split, merge\n",
-    "- Running all cells or selected cell(s)\n",
-    "- Restarting and interrupting the kernel\n",
     "- Caveat: Notebooks are nonlinear and running cells out of order can sometimes lead to unexpected results\n",
-    "  - It's good practice to periodically restart the kernel and run all cells, making sure that everything works as expected when you run the whole notebook from top to bottom\n",
-    "- Closing vs. shutting down a notebook &mdash; kernel process in background\n",
-    "- Re-opening a notebook after shutdown\n",
-    "  - All the code output is maintained from the previous kernel session\n",
-    "- Clear output of all cells or selected cell(s)"
+    "  - It's good practice to periodically restart the kernel and run all cells, making sure that everything works as expected when you run the whole notebook from top to bottom"
    ]
   },
   {
@@ -414,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -429,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -462,6 +453,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Here are some data types built-in to the Python language:\n",
+    "\n",
+    "* Integers - `int`\n",
+    "* Floating-point numbers - `float` - NaN belongs to this group\n",
+    "* Strings - `str`\n",
+    "* Booleans - `bool` - two values: True and False.\n",
+    "* Lists - `list`\n",
+    "* Tuples - `tuple`\n",
+    "* Sets - `set`\n",
+    "* Dictionaries - `dict`\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -485,26 +496,6 @@
    "outputs": [],
    "source": [
     "string = \"Mulan's dragon's name is Mushu\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Here are some data types built-in to the Python language:\n",
-    "\n",
-    "* Integers - `int`\n",
-    "* Floating-point numbers - `float` - NaN belongs to this group\n",
-    "* Strings - `str`\n",
-    "* Booleans - `bool` - two values: True and False.\n",
-    "* Lists - `list`\n",
-    "* Tuples - `tuple`\n",
-    "* Sets - `set`\n",
-    "* Dictionaries - `dict`\n"
    ]
   },
   {
@@ -563,7 +554,7 @@
     }
    },
    "source": [
-    "#### String Verbs\n",
+    "### String \"Verbs\"\n",
     "\n",
     "There are several methods/verbs to transform strings or extract information from them."
    ]
@@ -625,17 +616,85 @@
     }
    },
    "source": [
-    "### Casting"
+    "### Numerical Data Types and Casting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age = 6 \n",
+    "type(age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age = 6.0 \n",
+    "type(age)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
+    "**IMPORTANT**\n",
+    "Something that you will notice in Pandas dataframes are NaN values.\n",
+    "\n",
+    "This stands for **Not A Number**, and it is a special value used to represent missing data in pandas.\n",
+    "\n",
+    "It is considered a **float** numeric value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Casting**\n",
+    "\n",
     "- `int` to `float`:"
    ]
   },
@@ -1138,10 +1197,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def div_func(a,b):\n",
+    "    result = a/b\n",
+    "\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "div_func(5,2.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-bd58d4dd7e5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdiv_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-f4896a50c8c8>\u001b[0m in \u001b[0;36mdiv_func\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdiv_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: float division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "div_func(5,0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -1157,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1170,7 +1295,7 @@
        "-1.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1198,6 +1323,46 @@
    ],
    "source": [
     "div_func(5,0.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def count_letter_in_word(input_word='gulp'):\n",
+    "    return len(input_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'int' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-41d65a56ae70>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcount_letter_in_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-8-c86f50dd015c>\u001b[0m in \u001b[0;36mcount_letter_in_word\u001b[0;34m(input_word)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcount_letter_in_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_word\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'gulp'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_word\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'int' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "count_letter_in_word(5)"
    ]
   },
   {
@@ -1342,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1366,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1379,7 +1544,7 @@
        "[6, 7, [3, 4], 2, 8]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1403,7 +1568,7 @@
        "[6, 7, [3, 4], 2, 8]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1414,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1427,7 +1592,7 @@
        "[6, 7, [3, 4], 2, 8]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1451,20 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "list1[4] = 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1477,7 +1629,7 @@
        "[6, 7, [6, 4], 2, 8]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1501,7 +1653,7 @@
        "[6, 7, [3, 4], 2, 8]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1545,7 +1697,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-02-27 21:21:30.709489\n",
+      "2021-03-02 08:30:59.994683\n",
       "Type :-  <class 'datetime.datetime'>\n"
      ]
     }
@@ -1562,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1590,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1624,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1635,7 +1787,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Today's date:  2021-02-27 21:21:37.895202\n"
+      "Today's date:  2021-03-02 08:31:12.129357\n"
      ]
     }
    ],
@@ -1649,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1660,8 +1812,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Date after 15 days:  2021-03-14 21:21:37.895202\n",
-      "Date two weeks ago:  2021-02-13 21:21:37.895202\n",
+      "Date after 15 days:  2021-03-17 08:31:12.129357\n",
+      "Date two weeks ago:  2021-02-16 08:31:12.129357\n",
       "two_weeks_ago object type:  <class 'datetime.datetime'>\n"
      ]
     }
@@ -1758,7 +1910,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1769,7 +1921,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1789,7 +1941,7 @@
    "execution_count": 78,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
@@ -1816,7 +1968,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1827,7 +1979,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1847,6 +1999,34 @@
     "| %p | Am,PM |\n",
     "| %M | Minute 00,01..,59 |\n",
     "| %S | Second 00,01..,59 |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### IDEs for Python and DS \n",
+    "\n",
+    "![](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Python+IDEs/patolino-pernalonga-python-ide2.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Finding an IDE that works for you is important. \n",
+    "\n",
+    "If you are already familiar with an IDE, use it. \n",
+    "\n",
+    "Some previous LHL students have reported being happy with Visual Studio and others are happy with Jupyter Notebooks."
    ]
   },
   {
@@ -1991,39 +2171,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def compare(u1, u2):\n",
-    "    if u1 == u2:\n",
-    "        return(\"It's a tie!\")\n",
-    "    elif u1 == 'rock':\n",
-    "        if u2 == 'scissors':\n",
-    "            return(\"Rock wins!\")\n",
-    "        else:\n",
-    "            return(\"Paper wins!\")\n",
-    "    elif u1 == 'scissors':\n",
-    "        if u2 == 'paper':\n",
-    "            return(\"Scissors win!\")\n",
-    "        else:\n",
-    "            return(\"Rock wins!\")\n",
-    "    elif u1 == 'paper':\n",
-    "        if u2 == 'rock':\n",
-    "            return(\"Paper wins!\")\n",
-    "        else:\n",
-    "            return(\"Scissors win!\")\n",
-    "    else:\n",
-    "        return(\"Invalid input! You have not entered rock, paper or scissors, try again.\")\n",
-    "        sys.exit()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 70,
    "metadata": {
     "slideshow": {
@@ -2066,6 +2213,39 @@
    "source": [
     "user1_answer = input(\"%s, do yo want to choose rock, paper or scissors?\" % user1)\n",
     "user2_answer = input(\"%s, do you want to choose rock, paper or scissors?\" % user2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def compare(u1, u2):\n",
+    "    if ___ == _____:\n",
+    "        return(\"It's a tie!\")\n",
+    "    ____ u1 == 'rock':\n",
+    "        ____ u2 == 'scissors':\n",
+    "            return(\"Rock wins!\")\n",
+    "        ____:\n",
+    "            return(\"Paper wins!\")\n",
+    "    ____ u1 == 'scissors':\n",
+    "        ____ u2 == 'paper':\n",
+    "            return(\"Scissors win!\")\n",
+    "        ____:\n",
+    "            return(\"Rock wins!\")\n",
+    "    ____ u1 == 'paper':\n",
+    "        ____ u2 == 'rock':\n",
+    "            return(\"Paper wins!\")\n",
+    "        ____:\n",
+    "            return(\"Scissors win!\")\n",
+    "    ____:\n",
+    "        return(\"Invalid input! You have not entered rock, paper or scissors, try again.\")\n",
+    "        sys.exit()"
    ]
   },
   {
@@ -2114,7 +2294,7 @@
     "\n",
     "- If the recipe ingredient is in the pantry, check if the recipe requires more of the ingredient than what Alberto has in storage. If so, add the name and the quantity he needs to purchase as key-value pairs in the dictionary shopping_list.\n",
     "\n",
-    "- If the recipe item is not in the pantry, add the ingredient and the quantity as key-value pairs in the dictionary shopping_list."
+    "- If the recipe item is not in the pantry, add the ingredient and the quantity as **key-value pairs in the dictionary** shopping_list."
    ]
   },
   {
@@ -2144,9 +2324,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Additional Resources\n",
+    "[Python Documentation](https://docs.python.org/3/contents.html)  \n",
     "[O'Reilly Python DS Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/)  \n",
     "[UBC Programming in Python for DS](https://prog-learn.mds.ubc.ca/en/)"
    ]
